# onigiri

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-admin.bat  run.bat  run_admin.bat
apps/jpkr/: README.md
apps/jpkr-admin/: README.md
apps/jpkr-admin/api/: .env.example  pyproject.toml
apps/jpkr-admin/api/app/: auth_utils.py  db.py  initserver.py  main.py  models.py  routes_auth.py  settings.py
apps/jpkr-admin/api/app/routers/: routes_auth.py
apps/jpkr-admin/api/app/service/: analysis_text.py  examples_crud.py  get_similar_examples.py  get_similar_words.py  quiz_records.py  user_sevice.py  user_text_crud.py  words_crud.py  words_personal.py
apps/jpkr-admin/api/app/service/admin/: duplicated_words.py  example_audio.py  example_embeddings.py  example_image.py  example_words.py  filter_examples.py  filter_words.py  merge_duplicated_words.py  word_embeddings.py
apps/jpkr-admin/api/app/service/analysis/: embedding.py  tree_from_embedding.py  words_from_text.py
apps/jpkr-admin/api/app/service/generate/: stable_diffusion.py
apps/jpkr/api/: .env.example  creator.bat  pyproject.toml
apps/jpkr/api/app/: _creator_main.py  db.py  initserver.py  main.py  models.py  settings.py
apps/jpkr/api/app/_creator/: README.md  initserver.py  models.py  requirements.txt  settings.py
apps/jpkr/api/app/_creator/service/: get_similar_examples.py  get_similar_words.py
apps/jpkr/api/app/_creator/service/admin/: duplicated_words.py  example_embeddings.py  example_image.py  example_words.py  word_embeddings.py
apps/jpkr/api/app/_creator/service/generate/: stable_diffusion.py
apps/jpkr/api/app/methods/: recommend_examples.py  recommend_examples_advanced.py  recommend_examples_simple.py  recommend_examples_worst_reading.py  words_from_examples_batch.py
apps/jpkr/api/app/routers/: __init__.py  examples.py  routes_auth.py  text_analysis.py  user_texts.py  users.py  word_images.py  words.py
apps/jpkr/api/app/service/: __backup_upload_image.py  __init__.py  analysis_text.py  example_usage.py  examples_crud.py  feed_examples.py  user_sevice.py  user_text_crud.py  user_word_skill.py  words_crud.py  words_personal.py
apps/jpkr/api/app/service/admin/: examples_crud.py  filter_examples.py  filter_words.py  words_crud.py
apps/jpkr/api/app/service/analysis/: words_from_text.py
apps/jpkr/api/app/service/methods/: recommend_examples_fast.py  recommend_examples_fast_light.py  words_from_examples_batch.py
apps/jpkr/api/app/service/to_tsv/: JLPTwords_tsv.txt  to_tsv.py
apps/jpkr/api/app/user_auth/: db.py  routes.py
apps/jpkr/api/app/user_auth/utils/: auth_utils.py  auth_wrapper.py  jwt.py
apps/jpkr/api/app/utils/: auth.py  aws_s3.py  jwt.py
apps/jpkr/api/app/utils/to_tsv/: JLPTwords.txt  JLPTwords_fugashi_tsv.txt  db.py  to_db.py  to_tsv.py
apps/landingPage/: build.bat  index.html  package.json  vite.config.js
deployment/: app.conf  deployment.md  update.sh
docs/: 404.html  CNAME  dev-plan.md  index.html
documents/: loadmap.md
(+127 files in other folders)
